implemented proper SSE so that each NSM node update every dashboard on the network

--- a/internal/web/home-view.html
+++ b/internal/web/home-view.html
@@ -7,7 +7,7 @@
         all)</a>
 </span>
 
-<div class="host-list" id="host-list-container" data-on-load="@get('/api/hosts/stream')">
+<div class="host-list" id="host-list-container" data-on-sse="@get('/api/hosts/stream')">
     <table class="min-w-full bg-desert-darkgray shadow-lg rounded overflow-hidden border border-desert-gray">
         <thead>
             <tr class="bg-desert-gray text-left text-desert-tan text-sm">
